# THE-VAULT

./: LICENSE  README.md
the-vault/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
the-vault/app/: app.py
vault-ui/: .gitignore  package-lock.json  package.json
vault-ui/src/app/: globals.css  layout.js  page.js
